bindings/rust/abi.rs

// AUTO-GENERATED by tools/gen-abi-bindings.py — do not edit by hand.
// Regenerate: make gen-abi
//! libwgsl FFI surface (ABI layout + core entry points).
//!
//! Link against `libwgsl` (static or shared).  After load, call
//! [`wgsl_abi_layout`] and check `abi_version == ABI_VERSION`.

#![allow(non_camel_case_types)]

pub const ABI_VERSION: u32 = 1;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WGSLAbiLayout {
    pub abi_version: u32,
    pub ptr_size: u32,
    pub diagnostic_size: u32,
    pub diagnostic_severity: u32,
    pub diagnostic_line: u32,
    pub diagnostic_column: u32,
    pub diagnostic_end_line: u32,
    pub diagnostic_end_column: u32,
    pub diagnostic_message: u32,
    pub diagnostic_rule: u32,
    pub lex_token_size: u32,
    pub lex_token_kind: u32,
    pub lex_token_offset: u32,
    pub lex_token_length: u32,
    pub lex_token_line: u32,
    pub lex_token_column: u32,
    pub hover_size: u32,
    pub hover_present: u32,
    pub hover_type_repr: u32,
    pub hover_signature: u32,
    pub hover_doc: u32,
    pub hover_symbol_offset: u32,
    pub hover_symbol_length: u32,
    pub definition_size: u32,
    pub definition_present: u32,
    pub definition_offset: u32,
    pub definition_length: u32,
    pub interp_step_cap: u32,
    pub interp_buffer_values_cap: u32,
    pub interp_max_lanes: u32
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WGSLDiagnostic {
    pub severity: i32,
    pub line: u32,
    pub column: u32,
    pub end_line: u32,
    pub end_column: u32,
    pub message: *const std::os::raw::c_char,
    pub rule: *const std::os::raw::c_char,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WGSLLexToken {
    pub kind: i32,
    pub offset: u32,
    pub length: u32,
    pub line: u32,
    pub column: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WGSLHover {
    pub present: i32,
    pub type_repr: *const std::os::raw::c_char,
    pub signature: *const std::os::raw::c_char,
    pub doc: *const std::os::raw::c_char,
    pub symbol_offset: u32,
    pub symbol_length: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WGSLDefinition {
    pub present: i32,
    pub offset: u32,
    pub length: u32,
}

/// Opaque frontend result (own with [`wgsl_free`]).
pub enum WGSLResult {}
/// Opaque incremental session (own with [`wgsl_session_destroy`]).
pub enum WGSLSession {}

extern "C" {
    pub fn wgsl_init();
    pub fn wgsl_shutdown();
    pub fn wgsl_spec_pin() -> *const std::os::raw::c_char;
    pub fn wgsl_unicode_version() -> *const std::os::raw::c_char;
    pub fn wgsl_abi_layout() -> *const WGSLAbiLayout;

    pub fn wgsl_check(src: *const std::os::raw::c_char) -> *mut WGSLResult;
    pub fn wgsl_check_n(src: *const std::os::raw::c_char, src_len: usize) -> *mut WGSLResult;
    pub fn wgsl_ok(r: *const WGSLResult) -> i32;
    pub fn wgsl_error(r: *const WGSLResult) -> *const std::os::raw::c_char;
    pub fn wgsl_free(r: *mut WGSLResult);
    pub fn wgsl_diagnostic_count(r: *const WGSLResult) -> i32;
    pub fn wgsl_diagnostic(r: *const WGSLResult, index: i32) -> *const WGSLDiagnostic;
    pub fn wgsl_module_json(r: *const WGSLResult) -> *const std::os::raw::c_char;
    pub fn wgsl_module_json_len(r: *const WGSLResult) -> usize;

    pub fn wgsl_session_new() -> *mut WGSLSession;
    pub fn wgsl_session_destroy(s: *mut WGSLSession);
    pub fn wgsl_session_check(
        s: *mut WGSLSession,
        src: *const std::os::raw::c_char,
    ) -> *const WGSLResult;

    pub fn wgsl_free_string(s: *mut std::os::raw::c_char);
}
